_2008_08_20__16_42_31_ Chi-Hsiu Liang
  
  * Update manual 

2008-08-20 Chris Morley

	* mesmerDiag.xsl: Sort out vertical scaling

_2008_08_19__12_52_01_ Chi-Hsiu Liang

  * Updated manual

_2008_08_18__15_26_21_ Chi-Hsiu Liang

  * Add variables for additional <delta_E_down> dependency to temperature.
    The function is
    // Exponent of <Delta E down> according to the relation
    // <delta_E_down>(T) = <delta_E_down>_ref * (T / m_DeltaEdownRefTemp)^n
    // where m_DeltaEdownExponent is the exponent n
    // By default, n = 0, which means delta_E_down does not depend on temperature.
  * Recover the section printing grained species profile

_2008_08_11__18_07_40_ Chi-Hsiu Liang

  * Add an additional flag for command line mode, -N, which force the name of the test and log to be the same as the input XML
    For example, if input XML is Acetyl_O2_association.xml, then the test file will be Acetyl_O2_association.test, and the
    log file will be Acetyl_O2_association.log. However, the timestamp of the input file will be discarded. So, if the input
    file name is Acetyl_O2_association.20080811_181138.xml, the test file will still be Acetyl_O2_association.test.
    This flag will allow user to run multiple jobs in the same folder without having the test files overwriting each other.
  * Corrected the initialization order of class variables in Reaction classes.
  * Compile OK in cygwin.

2008-8-08 Dave Glowacki

* irreversible exchange reactions are now working in the recently added benzene oxidation system
* addReactionTerms routine has been added in IrreversibleExchangeReaction class
* irreversible and exchange reaction class have been replaced by irreversibleunimolecular reaction and irreversibleexchange reaction classes
  and changes to MESMER have been implemented in order to incorporate these classes
* implement testRateConstant routines in all reaction classes
* correct output stream printing in microrate.cpp